GNU bug report logs - #10482
error in output of arrays with rank != 1

Previous Next

Package: guile;

Reported by: Daniel Llorens <dll <at> jast.ch>

Date: Wed, 11 Jan 2012 18:17:02 UTC

Severity: normal

Done: Andy Wingo <wingo <at> pobox.com>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 10482 in the body.
You can then email your comments to 10482 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-guile <at> gnu.org:
bug#10482; Package guile. (Wed, 11 Jan 2012 18:17:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Daniel Llorens <dll <at> jast.ch>:
New bug report received and forwarded. Copy sent to bug-guile <at> gnu.org. (Wed, 11 Jan 2012 18:17:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Daniel Llorens <dll <at> jast.ch>
To: bug-guile <at> gnu.org
Subject: error in output of arrays with rank != 1
Date: Wed, 11 Jan 2012 18:53:06 +0100
I've found an bug in array output. It's peculiar. I haven't tried to debug it or bisect it, hopefully it rings a bell somewhere. It only happens when the rank of the array is not 1. This was tested in the last stable-2.0 (bbe34).

scheme@(guile-user)> (define c (make-array 0 2 2))
scheme@(guile-user)> c
$1 = #2((0 0) (0 0))
scheme@(guile-user)> c
$2 = #0#

c itself is fine, e.g. (array-dimensions c) gives 2, etc.

Here is a standalone test. 

(let ((c (make-array 0 2 2)))
  (equal?
    c
    (call-with-input-string
      (begin
        (format #f "~a" c) ; works without this
        (format #f "~a" c))
      read)))

Regards,

	Daniel



Reply sent to Andy Wingo <wingo <at> pobox.com>:
You have taken responsibility. (Thu, 12 Jan 2012 14:19:02 GMT) Full text and rfc822 format available.

Notification sent to Daniel Llorens <dll <at> jast.ch>:
bug acknowledged by developer. (Thu, 12 Jan 2012 14:19:02 GMT) Full text and rfc822 format available.

Message #10 received at 10482-done <at> debbugs.gnu.org (full text, mbox):

From: Andy Wingo <wingo <at> pobox.com>
To: Daniel Llorens <dll <at> jast.ch>
Cc: 10482-done <at> debbugs.gnu.org
Subject: Re: bug#10482: error in output of arrays with rank != 1
Date: Thu, 12 Jan 2012 15:17:35 +0100
On Wed 11 Jan 2012 18:53, Daniel Llorens <dll <at> jast.ch> writes:

> I've found an bug in array output. It's peculiar. I haven't tried to
> debug it or bisect it, hopefully it rings a bell somewhere. It only
> happens when the rank of the array is not 1. This was tested in the
> last stable-2.0 (bbe34).

How embarassing.  It was a new bug, introduced when I attempted to
support printing circular arrays.  Thanks for finding it before the
release!

Thanks,

Andy
-- 
http://wingolog.org/




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Fri, 10 Feb 2012 12:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 13 years and 315 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.